@@ -9,6 +9,7 @@ dist:
 	rm -f ltl3tools-$(VERSION)/third-party/*;               \
 	rm -rf ltl3tools-$(VERSION)/*/.svn;                     \
 	rm -rf ltl3tools-$(VERSION)/.svn;                       \
+	rm -rf ltl3tools-$(VERSION)/auto                        \
 	rm -rf ltl3tools-$(VERSION)/src/tmp;                    \
 	cd ltl3tools-$(VERSION)/src/;                           \
 	make clean; cd ..; cd ..;                               \
