@@ -1,3 +1,7 @@
+Tue Feb 17 09:41:44 EST 2009  <baueran@gmail.com>
+
+- Makefile, NEWS, README: release clean-ups
+
 Fri Jan 16 15:52:45 EST 2009  <baueran@gmail.com>
 
 - src/putils.ml:sigma_filter: fix bug that would corrupt output when
